--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,27 +1,11 @@
 # Custom Langflow Frontend with increased upload limit
 FROM langflowai/langflow-frontend:latest
 
-# Create a robust upload limit configuration that will be loaded first
-RUN echo 'client_max_body_size 100M;' > /etc/nginx/conf.d/01-upload-limit.conf
+# Set client_max_body_size in main nginx.conf
+RUN sed -i '/http {/a\    client_max_body_size 100M;' /etc/nginx/nginx.conf
 
-# Modify the main nginx.conf - handle various formats
-RUN sed -i 's/client_max_body_size [^;]*;/client_max_body_size 100M;/g' /etc/nginx/nginx.conf || true && \
-    sed -i '/http {/a\    client_max_body_size 100M;' /etc/nginx/nginx.conf || true && \
-    sed -i 's/http[[:space:]]*{/http {\n    client_max_body_size 100M;/' /etc/nginx/nginx.conf || true
-
-# Also update default.conf if it exists
-RUN if [ -f /etc/nginx/conf.d/default.conf ]; then \
-        sed -i 's/client_max_body_size [^;]*;/client_max_body_size 100M;/g' /etc/nginx/conf.d/default.conf || true; \
-        sed -i '/server {/a\    client_max_body_size 100M;' /etc/nginx/conf.d/default.conf || true; \
-    fi
-
-# Create wrapper script to ensure config is applied at runtime
-RUN printf '#!/bin/sh\n\
-echo "client_max_body_size 100M;" > /etc/nginx/conf.d/01-upload-limit.conf\n\
-exec "$@"\n' > /docker-entrypoint-wrapper.sh && chmod +x /docker-entrypoint-wrapper.sh
+# Also add to default.conf server block
+RUN sed -i '/listen.*8080;/a\    client_max_body_size 100M;' /etc/nginx/conf.d/default.conf
 
 # Verify nginx config
-RUN nginx -t || echo "Warning: nginx test failed but continuing"
-
-ENTRYPOINT ["/docker-entrypoint-wrapper.sh"]
-CMD ["nginx", "-g", "daemon off;"]
+RUN nginx -t
